<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".StudentUpdateActivity"
android:orientation="vertical"
android:background="#fff"
android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/slogan_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_curvee2"
            android:text="@string/student_update_title"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="24dp"
            android:textColor="#FFF"
            android:justificationMode="inter_word"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/msg_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#F81111"
            android:textSize="14sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstnameTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_firstname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastnameTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_lastname"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_parent"
                android:textColor="#000"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp">
                <RadioButton
                    android:id="@+id/mother"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_parent_mother"/>

                <RadioButton
                    android:id="@+id/father"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_parent_father"
                    android:layout_marginLeft="3dp"/>

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_parent_other"
                    android:layout_marginLeft="3dp"/>

            </RadioGroup>


            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_level"
                android:textColor="#000"
                android:textSize="14sp"/>

            <Spinner
                android:id="@+id/student_level_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:layout_marginBottom="15dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:background="#1171ba"
                android:text="@string/confirm"
                android:textColor="#fff" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>