<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="15dp"
    android:paddingRight="20dp"
    tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="150dp"
                android:layout_height="97dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/mlearning"
                android:transitionName="logo_image" />

            <TextView
                android:id="@+id/logo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/antic"
                android:text="@string/login_welcome"
                android:textColor="#000"
                android:textSize="24sp"
                android:transitionName="logo_text" />

            <TextView
                android:id="@+id/slogan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_continue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/login_msg_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#F81111"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/password_btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:text="@string/login_forget" />

                <Button
                    android:id="@+id/signin_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button"
                    android:text="@string/login_signin"
                    android:textColor="#fff"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="5dp"
                    android:background="@drawable/button_green"
                    android:elevation="0dp"
                    android:text="@string/login_singup"
                    android:textColor="#fff"
                    android:transitionName="trans_btn_signup"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>