<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentUpdateActivity"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/slogan_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_curvee2"
            android:text="@string/credit_card"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="24dp"
            android:textColor="#FFF"
            android:justificationMode="inter_word"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/owner"
                    android:hint="@string/credit_card_owner"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/credit_card"
                    android:hint="@string/card_number"
                    android:layout_marginBottom="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radioGroupStudentSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"/>




                <Spinner
                    android:id="@+id/month_spinner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="120dp"
                    android:layout_marginBottom="25dp"/>
                <Spinner
                    android:id="@+id/year_spinner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="230dp"
                    android:layout_marginTop="-50dp"
                    android:layout_marginBottom="25dp"/>
                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/expiration"
                    android:textSize="18dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="-50dp"
                    android:layout_marginBottom="25dp"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login"
                    android:hint="@string/login_username"
                    android:layout_marginBottom="15dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/crypto"
                    android:hint="@string/crypto"
                    android:layout_marginBottom="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#1171ba"
                    android:text="@string/pay"
                    android:textColor="#fff" />

            </LinearLayout>
        </LinearLayout>
</ScrollView>

