<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="724dp"
        android:background="@drawable/welcome_bg3_register"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="3dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/mlearning" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_welcome"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_success"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:padding="13dp"
            android:justificationMode="inter_word"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#4BB543"
            android:elevation="0dp"
            android:text="@string/login_signin"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>