<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassowordForgetActivity"
    android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="150dp"
                android:layout_height="97dp"
                android:src="@drawable/mlearning"
                android:transitionName="logo_image"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/password_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/antic"
                android:text="@string/login_forget_title"
                android:textColor="#000"
                android:textSize="24sp"
                android:transitionName="logo_text"
                android:gravity="center"/>

            <TextView
                android:id="@+id/password_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_forget_message"
                android:textSize="18sp"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password_forget_email"
                    android:hint="@string/register_email"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/password_send_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#000"
                    android:text="@string/login_forget_send"
                    android:textColor="#fff" />

            </LinearLayout>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>